Added support for google sign in

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.6
   google_fonts: ^2.2.0
   font_awesome_flutter: ^9.2.0
+  google_sign_in: ^5.2.3
 
 dev_dependencies:
   flutter_test:
